Changelog
=========

1.2.5 - unreleased
------------------

- Enabled `link-by-uid` for TinyMCE. Closes #206.
  [hannosch]

- Added a site action link to `hjelp.intranett.no`.
  [martior, hannosch]

- Don't send error log mails for link integrity exceptions. Closes #194.
  [hannosch]

- Reduce the height of text fields for the static text portlet.
  [hannosch]

- Fix the title of the employee listing, which accidentally got overridden by
  the site title. Closes #211.
  [hannosch]

- Update to munin.zope = 1.2.
  [ggozad]

- Increase the default height of text fields from 20 to about 40 lines.
  [hannosch]

- Hide the `change note` field and the `upload file` link in text fields.
  [hannosch]

- Reduce height of description field from five to three rows.
  [hannosch]

- Hide the `Edit without visual editor` link from text fields.
  [hannosch]

- Specify image dimensions for the edit-bar images.
  [hannosch]

- Increase cache max age for static assets to one week to follow `page speed`
  best practices.
  [hannosch]

- Optimize all image data sizes.
  [hannosch]

- Update to distribute = 0.6.15.
  [hannosch]

1.2.4 - 2011-04-21
------------------

- Change Varnish `default_ttl` to zero (from two minutes) to avoid caching
  responses without cache control headers.
  [hannosch]

- Update to Plone 4.0.5.
  [hannosch]

- Split out munin into its own buildout. Closes #201.
  [hannosch]

1.2.3 - 2011-04-14
------------------

- Add caching headers to under_construction image on error pages and specify
  image dimensions.
  [hannosch]

- Don't redirect to an error page if no Zope backend is available. Closes #198.
  [hannosch]

- Update to HAProxy 1.4.15.
  [hannosch]

- Sanitize and unbreak create_site and upgrade scripts.
  [MJ, hannosch]

- Don't rely on dist.plone.org.
  [hannosch]

1.2.2 - 2011-04-03
------------------

- Correct buildout's `allow-hosts` restriction.
  [hannosch]

1.2.1 - 2011-04-03
------------------

- Added new rapidssl certificate.
  [martior]
