@@ -57,4 +57,6 @@
     permission="plone.app.portlets.ManageOwnPortlets"
     />
 
+  <subscriber handler=".utils.warmupZODBCache" />
+
 </configure>
